--- a/Textos/ejercicio texte-02.html
+++ b/Textos/ejercicio texte-02.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ejercicio Texto-02</title>
+    <title>ejercicioTexto-02</title>
 </head>
 <body>
-  <p>Esto es un 
-  <pre>ejemplo      de      texto  
+ 
+  <pre>
+Esto es un 
+
+ejemplo      de      texto  
 preformateado.
 La marca pre       perserva     espacios    en   balnco y 
 saltos en linea
 </pre>
-  </p>
+  
 
       La marca <strong>pre</strong> también es buena para mostrar código de programación:
   
