--- a/Textos/Texto-05.html
+++ b/Textos/Texto-05.html
@@ -14,7 +14,7 @@
     </figure>
 <p> El <em>28 de octubre de 2014</em> se aprobó la <b>Recomendación HTML 5</b>, culminando así diez años de trabajo. 
 En 2004 se formó el <abbr title="Web Hypertext Application Technology Working Group">W.H.A.T.W.G</abbr>, un grupo informal de individuos y empresas 
-decididos a impulsar el desarrollo del HTML, que se encontraba bloqueado en el W3C desde el año 2000.
+decididos a impulsar el desarrollo del HTML, que se encontraba bloqueado en el <ABBR title="World Wide Web Consotrium"> W3C</ABBR> desde el año 2000.
 En 2007 el <abbr title="World Wide Web Consortium">W3C</abbr> retomó el trabajo sobre el HTML y siete años después se alcanzó el objetivo.</p>
     
 <p>Pero el HTML 5 no era más que el primer paso. En noviembre de 2016 se aprobó la recomendación HTML 5.1, 
@@ -27,7 +27,7 @@ el HTML 5.3 para finales de 2018.</p>
     </figure>   
 
 <p> Desde la aprobación de <abbr title="Cascading Style Sheets">CSS</abbr> 2 en 1998, el W3C ha estado trabajando en la siguiente generación de las hojas de estilo, las CSS 3.
-Las Recomendaciones CSS 3 se planificaron como un conjunto de recomendaciones en vez de como un documento único. El proceso resultó 
+<B>Las Recomendaciones CSS 3</B> se planificaron como un conjunto de recomendaciones en vez de como un documento único. El proceso resultó 
 mucho más largo de lo esperado: las primeras recomendaciones CSS 3 no se aprobaron hasta 2011.</p>
 
 <p>Aunque los navegadores admiten muchas características de los borradores de CSS 3, la publicación de HTML 5 no ha acelerado el 
