--- a/Textos/Texto-04.html
+++ b/Textos/Texto-04.html
@@ -12,12 +12,12 @@
    
 <p>Este es un ejemplo de Mini-Curriculum Vitae. Cualquier parecido con la realidad es pura coincidencia </p>
    
- <H2>Datos Personales</H2> 
+ <h2>Datos Personales</h2> 
     
 <p><strong>Nombre y Apellidos: </strong> Chema Pamundi </p>
 <p><strong>Direccion: C/</strong> Luis Moya nº13, p. 7 7 - 33203 - Gijon</p>
 <p><strong>D.N.I:</strong> 12.345.678.-S</p>
-<p><em><B>Correo electronico:</B></em>cpamundi@lalaboral.es</p>
+<p><em><b>Correo electronico:</b></em>cpamundi@lalaboral.es</p>
 
     <h2>Educación y formacion</h2>
 
