--- a/Textos/Texto-05.html
+++ b/Textos/Texto-05.html
@@ -10,11 +10,13 @@
     <h1>HTML 5 y CSS 3</h1>
     <h2>HTML 5</h2>
     <figure>
-        <img src="Imagenes/html5-logo.svg">
+        <img src="Imagenes/html5-logo.svg" alt="Logo HTML5" title="Logo HTML5">
+        <figcaption>Logo HTML5</figcaption>
     </figure>
+
 <p> El <em>28 de octubre de 2014</em> se aprobó la <b>Recomendación HTML 5</b>, culminando así diez años de trabajo. 
 En 2004 se formó el <abbr title="Web Hypertext Application Technology Working Group">W.H.A.T.W.G</abbr>, un grupo informal de individuos y empresas 
-decididos a impulsar el desarrollo del HTML, que se encontraba bloqueado en el <ABBR title="World Wide Web Consotrium"> W3C</ABBR> desde el año 2000.
+decididos a impulsar el desarrollo del HTML, que se encontraba bloqueado en el <abbr title="World Wide Web Consotrium"> W3C</abbr> desde el año 2000.
 En 2007 el <abbr title="World Wide Web Consortium">W3C</abbr> retomó el trabajo sobre el HTML y siete años después se alcanzó el objetivo.</p>
     
 <p>Pero el HTML 5 no era más que el primer paso. En noviembre de 2016 se aprobó la recomendación HTML 5.1, 
@@ -23,11 +25,12 @@ el HTML 5.3 para finales de 2018.</p>
 
     <h2>CSS 3</h2>
     <figure>
-        <img src="Imagenes/css3-logo.svg">
+        <img src="Imagenes/css3-logo.svg" alt="Logo CSS3" title="Logo CSS3">
+        <figcaption>Logo CSS3</figcaption>
     </figure>   
 
 <p> Desde la aprobación de <abbr title="Cascading Style Sheets">CSS</abbr> 2 en 1998, el W3C ha estado trabajando en la siguiente generación de las hojas de estilo, las CSS 3.
-<B>Las Recomendaciones CSS 3</B> se planificaron como un conjunto de recomendaciones en vez de como un documento único. El proceso resultó 
+<b>Las Recomendaciones CSS 3</b> se planificaron como un conjunto de recomendaciones en vez de como un documento único. El proceso resultó 
 mucho más largo de lo esperado: las primeras recomendaciones CSS 3 no se aprobaron hasta 2011.</p>
 
 <p>Aunque los navegadores admiten muchas características de los borradores de CSS 3, la publicación de HTML 5 no ha acelerado el 
