--- a/Textos/Texto-04 CSS.html
+++ b/Textos/Texto-04 CSS.html
@@ -13,11 +13,19 @@
         background-color: #7B919D;
         text-decoration: underline;
     }
+    P{
+        background-color: #A8ACAF;
+    }
+    #correo{
+        background-color: white;
+        text-align: right;
+
+    }
     </style>
 </head>
 <body>
    
-    <h1>Curriculum Vitae de Chema Pamundi</h1> 
+    <h1>CURRICULUM VITAE DE CHEMA PAMUNDI</h1> 
    
 <p>Este es un ejemplo de Mini-Curriculum Vitae. Cualquier parecido con la realidad es pura coincidencia </p>
    
@@ -26,7 +34,7 @@
 <p><strong>Nombre y Apellidos: </strong> Chema Pamundi </p>
 <p><strong>Direccion: C/</strong> Luis Moya nº13, p. 7 7 - 33203 - Gijon</p>
 <p><strong>D.N.I:</strong> 12.345.678.-S</p>
-<p><em><b>Correo electronico:</b></em>cpamundi@lalaboral.es</p>
+<p id="correo"><em><b>Correo electronico:</b></em>cpamundi@lalaboral.es</p>
 
     <h2>Educación y formacion</h2>
 
