--- a/Textos/Texto-07CSS.html
+++ b/Textos/Texto-07CSS.html
@@ -4,18 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Texto-05 CSS</title>
-    <style type="text/css">
-    
-    body{
-        color: #D3D3D3;
-    }
-    h2{
-        background-color: #808080;
-        color: white;
-    }
-    
-    </style>
+    <title>Texto-05</title>
 </head>
 <body>
     <h1>HTML 5 y CSS 3</h1>
