--- a/Textos/Texto-07.html
+++ b/Textos/Texto-07.html
@@ -4,36 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Texto-05</title>
+    <title>Texto-07</title>
 </head>
 <body>
-    <h1>HTML 5 y CSS 3</h1>
-    <h2>HTML 5</h2>
-    <figure>
-        <img src="Imagenes/html5-logo.svg" alt="Logo HTML5" title="Logo HTML5">
-        <figcaption>Logo HTML5</figcaption>
-    </figure>
+    <h1>CURRICULUM VITAE DE ANTAGILDO AGUIRRE PACHECO</h1>
+ 
+    <p>Este es un ejemplo de curriculum vitae. Cualqui parecido con la realidad es pura coincidencia</p>
 
-<p> El <em>28 de octubre de 2014</em> se aprobó la <b>Recomendación HTML 5</b>, culminando así diez años de trabajo. 
-En 2004 se formó el <abbr title="Web Hypertext Application Technology Working Group">W.H.A.T.W.G</abbr>, un grupo informal de individuos y empresas 
-decididos a impulsar el desarrollo del HTML, que se encontraba bloqueado en el <abbr title="World Wide Web Consotrium"> W3C</abbr> desde el año 2000.
-En 2007 el <abbr title="World Wide Web Consortium">W3C</abbr> retomó el trabajo sobre el HTML y siete años después se alcanzó el objetivo.</p>
+    <h2>Datos Personales</h2>
+
+    <br>Nombre y apellidos: Atangildo Aguirre Pacheco
+    <br>Direccion: C/ Toledo mº12 p 7 - 46027 Valencia
+    <br>Telefono 662354458- 984444888.
+    <br>Email. Atangildo.aguirre@example.org
+    <br>Nacionalidad: Español
+    <br>Fecha nacimiento 2 de abril de 1978
+    <br> D.N.I. número 27 182 828-S
     
-<p>Pero el HTML 5 no era más que el primer paso. En noviembre de 2016 se aprobó la recomendación HTML 5.1, 
-ampliando y clarificando el HTML 5, en diciembre de 2017 se aprobó la recomendación HTML 5.2 y el W3C prepara 
-el HTML 5.3 para finales de 2018.</p>
-
-    <h2>CSS 3</h2>
-    <figure>
-        <img src="Imagenes/css3-logo.svg" alt="Logo CSS3" title="Logo CSS3">
-        <figcaption>Logo CSS3</figcaption>
-    </figure>   
-
-<p> Desde la aprobación de <abbr title="Cascading Style Sheets">CSS</abbr> 2 en 1998, el W3C ha estado trabajando en la siguiente generación de las hojas de estilo, las CSS 3.
-<b>Las Recomendaciones CSS 3</b> se planificaron como un conjunto de recomendaciones en vez de como un documento único. El proceso resultó 
-mucho más largo de lo esperado: las primeras recomendaciones CSS 3 no se aprobaron hasta 2011.</p>
-
-<p>Aunque los navegadores admiten muchas características de los borradores de CSS 3, la publicación de HTML 5 no ha acelerado el 
-desarrollo de CSS 3.</p>
+    <h2>Experiencia Laboral</h2>
 </body>
 </html>
