--- a/Textos/CSS/Texto-08 CSS.html
+++ b/Textos/CSS/Texto-08 CSS.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Citas</title>
     <link rel="stylesheet" href="Syle_8.css">
+  
+
 </head>
 <body>
 
     <h1>CITAS DE VIRGILIO</h1>
 
-    <P class="intro"><strong>Publio Virvilio Marón</strong> (70 a.C - 19a.C) fue un poeta romano. Sus principales obras fueron <cite>la Eneida</cite>, <cite>las Bucólicas</cite> y <cite>las Geórgias</cite>. Algunos de sus versos se han convertido en citas célebres.</P>
+    <p class="intro"><strong>Publio Virvilio Marón</strong> (70 a.C - 19a.C) fue un poeta romano. Sus principales obras fueron <cite>la Eneida</cite>, <cite>las Bucólicas</cite> y <cite>las Geórgias</cite>. Algunos de sus versos se han convertido en citas célebres.</p>
 
     <p class="latin">Ab Iove principium.</p>
 
