--- a/ejercicio3/Cajas_01.html
+++ b/ejercicio3/Cajas_01.html
@@ -18,6 +18,7 @@
     }
 
     div.amistad{
+        color: #52584D;
         background-color: #C6FFFA;
         border: 2px dashed #32403F;
         margin-left: 15%;
@@ -26,6 +27,7 @@
     }
 
     div.salir{
+        color: #3B54DF;
         background-color: #E0EDF3;
         margin-left: 45%;
         margin-top: 3%;
@@ -34,6 +36,7 @@
     }
 
     div.amor{
+        color: #88227F;
         background-color: #FE98FE;
         text-align: center;
         margin-right: 45%;
@@ -43,7 +46,7 @@
     }
 
     div.vida{
-
+        color:white;
         background-color: #663366;
         margin-left: 45%;
         margin-top: 3%;
@@ -52,7 +55,7 @@
     }
     
     div.trabajar{
-
+        color: #52584D;
         background-color: #C6FFFA;
         border: 2px dashed #32403F;
         margin-left: 15%;
