--- a/CreatingHyperLinks/Proyectos/index.html
+++ b/CreatingHyperLinks/Proyectos/index.html
@@ -10,5 +10,7 @@
     <h1>This is my project page</h1>
 
     <p> <a href="../index.html">Enlace para volver al indice principal</a></p>
+
+    <p> <a href="../PDF/MDN - Creando-hipervínculos.pdf"> Este enlace lleva al PDF dentro de proyectos</a></p>
 </body>
 </html>
