--- a/CreatingHyperLinks/index.html
+++ b/CreatingHyperLinks/index.html
@@ -12,5 +12,14 @@
 
     <p>Visit my <a href="Proyectos/index.html"> project homepage</a>. </p>
 
+   <p> want to contact a specefi staff memeber? Find details on our
+    <a href="contactos.html"> contacts page</a></p>
+
+
+    <p> <a href="PDF/MDN - Creando-hipervínculos.pdf"> Este enlace lleva al PDF</a></p>
+
+    <p> want to write a letter? use our <a href="contactos.html#Mailing_adress"> mailing adress</a>.</p>
+
+
 </body>
 </html>
