--- a/EjercicioEnlaces/Ejercicio_6/Capitalismo.html
+++ b/EjercicioEnlaces/Ejercicio_6/Capitalismo.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style type="text/css">
+    
+    body{
+     background-color: #89675B;
+    }
+    h1{
+        text-align: center;
+        color: white;
+    }
+    b{
+        font-size: 2rem;
+    }
+
+    
+    </style>
 </head>
 <body>
 <h1>   Capitalismo. G.K. Chesterton</h1>  
@@ -12,7 +27,7 @@
 
     <p>Un ciudadano apenas puede distinguir un impuesto de una multa, salvo que la multa suele ser más barata.</p>
   
-    <p>"Demasiado capitalismo" no significa "demasiados capitalistas", sino "demasiados pocos capitalistas".</p>
+    <p>"<b>D</b>emasiado capitalismo" no significa "demasiados capitalistas", sino "demasiados pocos capitalistas".</p>
   
    <p> El capitalismo es ese sistema comercial que proporciona respuestas inmediatas ante cualquier demanda y en el que todo el mundo parece totalmente insatisfecho e incapaz de conseguir lo que desea.</p>
   
