--- a/EjercicioEnlaces/ejercicio 1/ejemploURLs.html
+++ b/EjercicioEnlaces/ejercicio 1/ejemploURLs.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Vamonos de ruta! elige una <b></h1>
+    <h1><b>Vamonos de ruta! elige una </b></h1>
     <p> <a href="ruta 1/1Ruta.html">Enlace para la primera ruta</a></p>
     <p> <a href="ruta 1/ruta2/2Ruta.html">Enlace para la segunda ruta</a></p>
 </body>
