--- a/Textos/CSS/Textp-05 CSS.html
+++ b/Textos/CSS/Textp-05 CSS.html
@@ -46,7 +46,7 @@
     <h1>HTML 5 y CSS 3</h1>
     <h2>HTML 5</h2>
     <figure>
-        <img src="Imagenes/html5-logo.svg" alt="Logo HTML5" title="Logo HTML5">
+        <img src="../Imagenes/html5-logo.svg" alt="Logo HTML5" title="Logo HTML5">
         <figcaption>Logo HTML5</figcaption>
     </figure>
 
@@ -61,7 +61,7 @@ el HTML 5.3 para finales de 2018.</p>
 
     <h2>CSS 3</h2>
     <figure>
-        <img src="Imagenes/css3-logo.svg" alt="Logo CSS3" title="Logo CSS3">
+        <img src="../Imagenes/css3-logo.svg" alt="Logo CSS3" title="Logo CSS3">
         <figcaption>Logo CSS3</figcaption>
     </figure>   
 
